--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -61,7 +61,8 @@
                 id="collapseExample">Role-Permission</a>
               <a href="javascript:void(0)" [routerLink]="['/admin/companySetting']" id="collapseExample">Company
                 Setting</a>
-              <a href="#">SMS Setting</a>
+              <a href="javascript:void(0)" [routerLink]="['/admin/smsSetting']" id="collapseExample">SMS Setting
+                </a>
               <a href="javascript:void(0)" [routerLink]="['/admin/companyLoginHistory']" id="collapseExample">Login
                 History</a>
               <a href="#">Recycle-Bin</a>
