--- a/web/src/app/admin/employee/employee.component.html
+++ b/web/src/app/admin/employee/employee.component.html
@@ -69,10 +69,10 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Email</mat-label>
-                                                <input matInput name="Email" type="email" [(ngModel)]="data.Email"
+                                                <input matInput name="Email" type="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" [(ngModel)]="data.Email"
                                                     #Emailcontrol required>
                                                 <mat-error>
-                                                    InValid Emailid.
+                                                    InValid Email.
                                                 </mat-error>
                                             </mat-form-field>
                                         </div>
