--- a/web/src/app/admin/shop/shop.component.html
+++ b/web/src/app/admin/shop/shop.component.html
@@ -82,7 +82,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Email</mat-label>
                                                 <input matInput name="email" type="email" ngModel [email]="true"
-                                                    pattern="[a-zA-Z0-9.-_]{3,}@[a-zA-Z.-]{3,}[.]{1}[a-zA-Z]{3,}"
+                                                    pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                                                     [(ngModel)]="data.Email" #Emailcontrol>
                                                 <mat-error>
                                                     Invalid EmailId.
