--- a/web/src/app/inventory/fitter/fitter.component.html
+++ b/web/src/app/inventory/fitter/fitter.component.html
@@ -52,7 +52,7 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Email</mat-label>
                                                 <input matInput name="Email"
-                                                    pattern="[a-zA-Z0-9.-_]{3,}@[a-zA-Z.-]{3,}[.]{1}[a-zA-Z]{3,}"
+                                                pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                                                     [(ngModel)]="data.Email"
                                                     (ngModelChange)="data.Email = onChange($event)" #Emailcontrol>
                                                 <mat-error>
