--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -181,7 +181,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0">
                             <mat-form-field class="example-full-width mb-0">
                                 <mat-label>Email</mat-label>
-                                <input matInput name="Email" [(ngModel)]="data.Email"
+                                <input matInput name="Email" [(ngModel)]="data.Email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                                     (ngModelChange)="data.Email = onChange($event)" #Emailcontrol>
                                 <!-- pattern="[a-zA-Z0-9.-_]{3,}@[a-zA-Z.-]{3,}[.]{1}[a-zA-Z]{3,}"  -->
                                 <mat-error>
