--- a/web/src/app/sale/doctor/doctor.component.html
+++ b/web/src/app/sale/doctor/doctor.component.html
@@ -86,7 +86,7 @@
                                         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
                                                 <mat-label>Email</mat-label>
-                                                <input matInput name="Email" type="email" [(ngModel)]="data.Email"
+                                                <input matInput name="Email" type="email" [(ngModel)]="data.Email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                                                     (ngModelChange)="data.Email = onChange($event)" />
                                                 <mat-error>Invalid EmailId.</mat-error>
                                             </mat-form-field>
