--- a/web/src/app/inventory/purchase/purchase.component.html
+++ b/web/src/app/inventory/purchase/purchase.component.html
@@ -10,16 +10,11 @@
                                 <h2>Purchase Info </h2>
                             </div>
                             <!-- togggle btn start -->
-                            <div class="col-xl-4 col-lg-5 col-md-5 col-8 ms-auto">
+                            <div class="col-xl-3 col-lg-5 col-md-5 col-8 ms-auto">
                                 <span style="color: rgb(33, 33, 33);">
                                     <mat-slide-toggle name="BrandType" color="primary" [(ngModel)]="item.BrandType"
                                         [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
                                         #Multiplecontrol>Branded</mat-slide-toggle>
-                                </span>
-                                <span class="ms-2 " style="color: rgb(33, 33, 33);">
-                                    <mat-slide-toggle name="BrandType" color="primary" [(ngModel)]="item.Ledger"
-                                        [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
-                                        #Multiplecontrol>Non-Branded</mat-slide-toggle>
                                 </span>
                                 <span class="ms-2 me-2" style="color: rgb(33, 33, 33);">
                                     <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="disableAddButtons"
@@ -36,7 +31,7 @@
                     </div>
                     <div class="body">
                         <!-- save purchase start -->
-                        <form #f="ngForm" autocomplete="off">
+                        <form #f="ngForm" autocomplete="off" (ngSubmit)="addItem()">
                             <!-- save purchase start -->
                             <div class="row">
                                 <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 d-inline-flex">
@@ -109,20 +104,28 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-lg-2 col-md-6 col-6 ms-auto pt-2 p-0" *ngIf="category !== 'Charges'">
-                                    <span>
-                                        <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="item.Multiple"
-                                            [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
-                                            #Multiplecontrol>Multiple</mat-slide-toggle>
+                                <div class="col-lg-3 col-md-6 col-6 ms-auto pt-2 p-0" *ngIf="category !== 'Charges'">
+                                    
+                                <span>
+                                    <mat-slide-toggle name="BrandType" color="primary" [(ngModel)]="item.Ledger"
+                                        [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
+                                        #Multiplecontrol>Non-Branded</mat-slide-toggle>
+
+                                </span>
+                                    <span class="me-2 ms-2">
+                                        <mat-slide-toggle name="WholeSale" color="primary" [(ngModel)]="item.WholeSale"
+                                        class="example-margin" #Multiplecontrol>WholeSale</mat-slide-toggle>
+                                
                                     </span>
                                     <!-- <span class="ms-2 me-2">
                                         <mat-slide-toggle name="Ledger" color="primary" [(ngModel)]="item.Ledger"
                                             [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
                                             #Multiplecontrol>Ledger Entry</mat-slide-toggle>
                                     </span> -->
-                                    <span class="ms-4">
-                                        <mat-slide-toggle name="WholeSale" color="primary" [(ngModel)]="item.WholeSale"
-                                            class="example-margin" #Multiplecontrol>WholeSale</mat-slide-toggle>
+                                    <span >
+                                        <mat-slide-toggle name="Multiple" color="primary" [(ngModel)]="item.Multiple"
+                                        [disabled]="selectedPurchaseMaster.ID !== null" class="example-margin"
+                                        #Multiplecontrol>Multiple</mat-slide-toggle>
                                     </span>
                                 </div>
                             </div>
@@ -149,6 +152,7 @@
                                         </mat-form-field>
                                         <mat-checkbox class="pt-3" name="{{spec.FieldName+'0'}}" color="primary"
                                             [(ngModel)]="spec.CheckBoxValue"></mat-checkbox>
+
                                         <mat-form-field class="mr-0 mb-0" *ngIf="spec.DisplayAdd === 1">
                                             <mat-label>Add {{spec.FieldName}}</mat-label>
                                             <input matInput name="{{spec.FieldName+'1'}}"
@@ -172,13 +176,14 @@
                                             <mat-label>{{spec.FieldName}}</mat-label>
                                             <input matInput name="{{spec.FieldName+'2'}}"
                                                 [(ngModel)]="spec.SelectedValue"
-                                                (ngModelChange)="spec.SelectedValue = onChange($event)" editable="true"
+                                                (ngModelChange)="spec.SelectedValue = onChange($event)" 
                                                 [required]="spec.Required === 1">
                                             <mat-error>
                                                 {{spec.FieldName}} is Required
                                             </mat-error>
                                         </mat-form-field>
-                                        <mat-checkbox class="pt-3" name="{{spec.FieldName+'2'}}" color="primary"
+
+                                        <mat-checkbox type="checkbox" class="pt-3" name="{{spec.FieldName+'2'}}" color="primary"
                                             [(ngModel)]="spec.CheckBoxValue"></mat-checkbox>
                                     </div>
                                     <div *ngIf="spec.FieldType === 'Date'" class="d-flex">
@@ -192,6 +197,7 @@
                                                 {{spec.FieldName}} is Required
                                             </mat-error>
                                         </mat-form-field>
+
                                         <mat-checkbox class="pt-3" name="{{spec.FieldName+'2'}}" color="primary"
                                             [(ngModel)]="spec.CheckBoxValue"></mat-checkbox>
                                     </div>
@@ -199,6 +205,7 @@
                                         <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary"
                                             class="example-margin" #Multiplecontrolx [(ngModel)]="spec.SelectedValue">
                                             {{spec.FieldName}}</mat-slide-toggle>
+
                                         <mat-checkbox class="pt-3" name="{{spec.FieldName+'3'}}" color="primary"
                                             [(ngModel)]="spec.CheckBoxValue" [required]="spec.Required === 1">
                                         </mat-checkbox>
@@ -251,39 +258,37 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 d-flex">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>(GST/VAT)% / Amt </mat-label>
                                         <div class="d-flex">
-                                        <input matInput name="GST" [(ngModel)]="item.GSTPercentage" required #GSTcontrol
-                                            [autocomplete]="false" (change)="calculateFields('GSTPercentage', 'gst')"> /
-                                            <input matInput name="GSTAmt" [(ngModel)]="item.GSTAmount" required
-                                            #GSTAmtcontrol [autocomplete]="false" (change)="calculateFields('GSTAmount', 'gst')">
-                                    </div>
+                                           <div class="d-flex">
+                                               <input matInput name="GST" [(ngModel)]="item.GSTPercentage" required #GSTcontrol
+                                                [autocomplete]="false" (blur)="calculateFields('GSTPercentage', 'gst')"> /
+                                               <input matInput name="GSTAmt" [(ngModel)]="item.GSTAmount" required
+                                                 #GSTAmtcontrol [autocomplete]="false" (blur)="calculateFields('GSTAmount', 'gst')">
+                                            </div>
+                                            <mat-checkbox *ngIf="item.GSTPercentage !== 0 && item.GSTPercentage !== '0'" name="gstperLock" color="primary" [(ngModel)]="gstperLock"></mat-checkbox>
+                                        </div>
                                     <mat-error>
                                         GST is required
                                     </mat-error>
-                                    <!-- <mat-checkbox *ngIf="item.GSTPercentage !== 0 && item.GSTPercentage !== '0'"
-                                        name="gstperLock" color="primary" [(ngModel)]="gstperLock"></mat-checkbox> -->
                                     </mat-form-field>
                                 </div>
-                              
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 d-flex">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>TAX Type</mat-label>
-                                        <mat-select name="GSTType" [(ngModel)]="item.GSTType" #GSTTypecontrol1 required (selectionChange)="calculateFields('TotalAmount', 'total')" (blur)="calculateFields('TotalAmount', 'total')">
-                                            <mat-option value="None"
-                                                *ngIf="item.GSTPercentage  === 0 || item.GSTAmount === 0">None
+                                        <mat-select name="GSTType" [(ngModel)]="item.GSTType" #GSTTypecontrol1 required (selectionChange)="calculateFields('TotalAmount', 'total')" (blur)="calculateFields('TotalAmount', 'total');notifyGst();" >
+                                            <mat-option value="None" *ngIf="item.GSTPercentage  === 0 || item.GSTAmount === 0">None
                                             </mat-option>
                                             <mat-option  [value]="g.Name" *ngFor="let g of gstList">{{g.Name}}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
-                                    <!-- <mat-checkbox
-                                        *ngIf="item.GSTType !== 'None' && item.GSTPercentage !== 0 && item.GSTPercentage !== '0'"
-                                        name="gstLock" color="primary" [(ngModel)]="gstLock"></mat-checkbox> -->
+                                    <mat-checkbox style="padding-top: 14px;" *ngIf="item.GSTType !== 'None' && item.GSTPercentage !== 0 && item.GSTPercentage !== '0'" name="gstLock" color="primary" [(ngModel)]="gstLock"></mat-checkbox>
+
                                 </div>
-                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ms-2">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Total Amount</mat-label>
                                         <input matInput name="TotalAmount" [(ngModel)]="item.TotalAmount"
