--- a/web/src/app/admin/company-list.component.html
+++ b/web/src/app/admin/company-list.component.html
@@ -94,13 +94,17 @@
                                             <!-- <th class="text-left">Plan</th> -->
                                             <th class="text-left">Version</th>
                                             <th class="text-left">CacellationDate</th>
+                                            <th class="text-left">Status</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
-                                            <td style="white-space: nowrap;">
-                                                <mat-icon class="sync_disabled me-1" title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
-                                                <mat-icon class="swap_icon me-1" title="companylogin" (click)="companylogin(i)">swap_vert</mat-icon>
+                                    <tbody >
+                                        <tr  class="text-center" *ngFor="let data of dataList  ; let i = index;">
+                                            <td  [ngClass]="{'disabled':data.Status == 0}" style="white-space: nowrap;">
+                                                <mat-icon *ngIf="data.Status === 1" class="sync_disabled me-1" title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
+
+                                                <mat-icon *ngIf="data.Status === 0" class="swap_icon me-1" title="Active" (click)="activecompany(i)">sync</mat-icon>
+
+                                                <mat-icon class="swap_icon me-1" title="companylogin" (click)="companylogin(i)" style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
                                                 <i class="fas fa-info-circle" title="Edit"
                                                     style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
                                                     [routerLink]="['/admin/company',data.ID]" >
@@ -108,18 +112,21 @@
                                                 <mat-icon class="delete_icon ms-1" title="Delete" (click)="deleteItem(i)">delete_forever</mat-icon>
                                                
                                             </td>
-                                            <td class="text-left">{{ dataList.length - i }}</td>
-                                            <td class="text-left">{{data.Name}}</td>
-                                            <td class="text-left">{{data.OwnerName }}</td>
-                                            <td class="text-left">{{data.Address }}</td>
-                                            <td class="text-left">{{data.City }}</td>
-                                            <td class="text-left">{{data.MobileNo1 }}</td>
-                                            <td class="text-left">{{data.Email}}</td>
-                                            <td class="text-left">{{data.EffectiveDate}}</td>
-                                            <td class="text-left">{{data.NoOfShops}}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{ dataList.length - i }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Name}}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.OwnerName }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Address }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.City }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.MobileNo1 }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Email}}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.EffectiveDate}}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.NoOfShops}}</td>
                                             <!-- <td class="text-left">{{data.Plan}}</td> -->
-                                            <td class="text-left">{{data.Version}}</td>
-                                            <td class="text-left">{{data.CancellationDate }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Version}}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.CancellationDate }}</td>
+                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}"> <span *ngIf="data.Status === 0">Deactive </span>
+                                                 <span *ngIf="data.Status === 1">Active </span>  
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
