--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -99,6 +99,7 @@
             <a class="dropBtn" data-target="#collapseExample">Billing <i class="fa fa-caret-down"
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
+              <a href="javascript:void(0)" [routerLink]="['/sale/billing',0]" id="collapseExample">Billing</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
             </div>
           </div>
