--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -20,16 +20,23 @@
                                 <!-- nav-tabs start -->
                                 <ul class="nav nav-tabs mb-3" id="ex1" role="tablist"
                                     style="justify-content: space-between;">
-                                    <li class="nav-item" role="presentation">
+                                    
+                                    <li class="nav-item d-flex" role="presentation" >
+                                        <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.SpectacleCheck" style="position: absolute;
+                                        z-index: 9;" ></mat-checkbox>
                                         <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab"
                                             href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
                                             aria-selected="true">Spectacle Rx</a>
                                     </li>
-                                    <li class="nav-item" role="presentation">
+                                    <li class="nav-item d-flex"  role="presentation">
+                                        <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.ContactCheck" style="position: absolute;
+                                        z-index: 9;" ></mat-checkbox>
                                         <a class="nav-link" id="ex1-tab-2" data-mdb-toggle="tab" href="#ex1-tabs-2"
                                             role="tab" aria-controls="ex1-tabs-2" aria-selected="false">Contact Rx</a>
                                     </li>
-                                    <li class="nav-item" role="presentation">
+                                    <li class="nav-item d-flex" role="presentation">
+                                        <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.OtherCheck" style="position: absolute;
+                                        z-index: 9;" ></mat-checkbox>
                                         <a class="nav-link" id="ex1-tab-3" data-mdb-toggle="tab" href="#ex1-tabs-3"
                                             role="tab" aria-controls="ex1-tabs-3" aria-selected="false">Other Rx</a>
                                     </li>
