--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -100,6 +100,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/sale/billing',0]" id="collapseExample">Billing</a>
+              <a href="javascript:void(0)" [routerLink]="['/sale/customerList']" id="collapseExample">CustomerList</a>
               <a href="javascript:void(0)" [routerLink]="['/sale/doctorList']" id="collapseExample">Doctor</a>
             </div>
           </div>
