--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -22,11 +22,9 @@
                                     style="justify-content: space-between;">
                                     
                                     <li class="nav-item d-flex" role="presentation" >
-                                        <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.SpectacleCheck" style="position: absolute;
-                                        z-index: 9;" ></mat-checkbox>
-                                        <a class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab"
-                                            href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
-                                            aria-selected="true">Spectacle Rx</a>
+                                        <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.SpectacleCheck" style="position: absolute;z-index: 9;padding: 1px 6px;font-size: 12px;" class="nav-link active" id="ex1-tab-1" data-mdb-toggle="tab" href="#ex1-tabs-1" role="tab" aria-controls="ex1-tabs-1"
+                                            aria-selected="true">Spectacle Rx 
+                                        </mat-checkbox>
                                     </li>
                                     <li class="nav-item d-flex"  role="presentation">
                                         <mat-checkbox class="example-margin ps-1" [(ngModel)]="Check.ContactCheck" style="position: absolute;
@@ -46,7 +44,7 @@
                         </div>
                     </div>
                     <div class="body">
-                        <form #f="ngForm" autocomplete="off" (ngSubmit)="onsubmit()">
+                        <form #f="ngForm" autocomplete="off" >
                             <div class="row">
                                 <!-- Customer from start  -->
                                 <div class="col-md-6">
@@ -129,24 +127,27 @@
                                             </mat-form-field>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mb-0 ms-auto">
-                                            <button mat-raised-button color="primary"
+                                            <button *ngIf="this.id !== 0"  (click)="updateCustomer()" [disabled]="!f.valid" mat-raised-button color="primary"
+                                            style="padding: 0px 40px;">update</button>
+                                            <button *ngIf="this.id == 0" (click)="onsubmit()"  [disabled]="!f.valid" mat-raised-button color="primary"
                                                 style="padding: 0px 40px;">Save</button>
+                                              
                                         </div>
                                     </div>
                                 </div>
                                 <!-- Customer from end  -->
                                 <!-- power box start  -->
                                 <div class="col-md-6">
-                                    <div class="row">
+                                    <div class="row p-0 m-0">
                                         <!-- Tabs content -->
-                                        <div class="tab-content mt-1" id="ex1-content">
+                                        <div class="tab-content mt-1 p-0 pe-2 ps-0 mostly-customized-scrollbar" id="ex1-content" style="overflow: auto; height: 163px;">
 
                                             <!-- spectacle start -->
-                                            <div class="tab-pane fade show active p-1 pb-0" id="ex1-tabs-1" role="tabpanel"
+                                            <div  class="tab-pane fade show active p-1 pb-0" id="ex1-tabs-1" role="tabpanel"
                                                 aria-labelledby="ex1-tab-1" style="border: 1px solid #0027ff">
                                                 <div class="row  powerRow">
                                                     <div class="col-1 m-0 p-0 ps-1">
-                                                        <button class="extra m-0" (click)="openModal(Spectacles)">EXTRA</button>
+                                                        <b class="extra m-0 p-1" (click)="openModal(Spectacles)">EXTRA</b>
                                                     </div>
                                                     <div class="col-3">
                                                         <span class="right_letf">Right Eye</span>
@@ -175,7 +176,7 @@
                                                     style="justify-content: space-between;margin-right: 12px;">
                                                     <div class="col-1 fw-bold pe-0">Dis.</div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text"  name="REDPSPH" #myDiv2
+                                                        <input class="inputWidth box" type="text"  name="REDPSPH"  
                                                             [(ngModel)]="spectacle.REDPSPH" id="REDPSPH"
                                                             list="dpsphList">
                                                         <datalist id="dpsphList">
@@ -197,7 +198,7 @@
                                                             [(ngModel)]="spectacle.REDPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="REDPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="REDPVA"  
                                                             [(ngModel)]="spectacle.REDPVA" id="REDPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -209,7 +210,7 @@
                                                             [(ngModel)]="spectacle.R_Addition">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LEDPSPH" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LEDPSPH"  
                                                             [(ngModel)]="spectacle.LEDPSPH" id="LEDPSPH"
                                                             list="dpsphList">
                                                         <datalist id="dpsphList">
@@ -231,7 +232,7 @@
                                                             [(ngModel)]="spectacle.LEDPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LEDPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LEDPVA"  
                                                             [(ngModel)]="spectacle.LEDPVA" id="LEDPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -250,7 +251,7 @@
                                                     <div class="col-1 fw-bold">Near</div>
 
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="RENPSPH" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="RENPSPH"  
                                                             [(ngModel)]="spectacle.RENPSPH" id="RENPSPH"
                                                             list="dpsphList">
                                                         <datalist id="dpsphList">
@@ -272,7 +273,7 @@
                                                             [(ngModel)]="spectacle.RENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="RENPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="RENPVA"  
                                                             [(ngModel)]="spectacle.RENPVA" id="RENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -307,7 +308,7 @@
                                                             [(ngModel)]="spectacle.LENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LENPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LENPVA"  
                                                             [(ngModel)]="spectacle.LENPVA" id="LENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -375,6 +376,9 @@
                                                             <input matInput name="FittingHeight" [(ngModel)]="spectacle.FittingHeight" />
                                                         </mat-form-field>
                                                     </div>
+                                                </div>
+                                                <div class="row ">
+                                                    <app-customer-power-list [spectacleChild]="this.spectacleLists"> </app-customer-power-list>
                                                 </div>
                                             </div>
                                             <!-- spectacle end -->
@@ -446,7 +450,7 @@
                                                             [(ngModel)]="clens.R_Addition">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LEDPSPH" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LEDPSPH"  
                                                             [(ngModel)]="clens.LEDPSPH" id="LEDPSPH" list="dpsphList">
                                                         <datalist id="dpsphList">
                                                             <option [value]="d.Name" *ngFor="let d of dataSPH">
@@ -466,7 +470,7 @@
                                                             [(ngModel)]="clens.LEDPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LEDPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LEDPVA"  
                                                             [(ngModel)]="clens.LEDPVA" id="LEDPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -505,7 +509,7 @@
                                                             [(ngModel)]="clens.RENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="RENPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="RENPVA"  
                                                             [(ngModel)]="clens.RENPVA" id="RENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -538,7 +542,7 @@
                                                             [(ngModel)]="clens.LENPAxis">
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="text" name="LENPVA" #myDiv2
+                                                        <input class="inputWidth box" type="text" name="LENPVA"  
                                                             [(ngModel)]="clens.LENPVA" id="LENPVA" list="dpvaList">
                                                         <datalist id="dpvaList">
                                                             <option [value]="d.Name" *ngFor="let d of dataPVA">
@@ -607,11 +611,15 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
+                                                <div class="row ">
+                                                    <app-customer-power-list [contactChild]="this.contactList"> </app-customer-power-list>
+                                                </div>
+                                               
                                             </div>
                                             <!-- COntact end -->
 
                                             <!-- Other start -->
-                                            <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel"
+                                            <div class="tab-pane fade p-1 pb-0" id="ex1-tabs-3" role="tabpanel"
                                                 aria-labelledby="ex1-tab-3"  style="border: 1px solid #0027ff">
                                                 <div class="row">
                                                     <div class="col-md-2">
@@ -711,6 +719,9 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
+                                                <div class="row ">
+                                                    <app-customer-power-list [otherChild]="this.otherList"> </app-customer-power-list>
+                                                </div>
                                             </div>
                                             <!-- Other end -->
                                         </div>
@@ -724,7 +735,7 @@
                             <ng-template #customer role="document" let-modal>
                                 <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
                                     <h2 class="modal-title header pt-2" id="exampleModalLabel">Customer Extra Fields
-                                        <span class="ms-md-5 me-md-5 ms-0 pe-5 pt-3 pt-md-0">Cust_ID</span>
+                                        <span class="ms-md-5 me-md-5 ms-0 pe-5 pt-3 pt-md-0">Cust_ID - <b style="color:#000;">{{this.data.Idd}}</b> </span>
                                         <span class="ms-5 me-5 pt-3 pt-md-0">Cust_Category</span>
                                     </h2>
                                     <button type="button" title="Close Botton" class="btn-close" aria-hidden="true"
